# serializer version: 1
# name: test_parse_album[album]
  dict({
    'album_type': 'album',
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '12345',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': list([
            dict({
              'path': 'https://resources.tidal.com/images/1234/5678/90ab/cdef/750x750.jpg',
              'provider': 'tidal_instance',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
          ]),
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': None,
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': 'Test Artist',
        'position': None,
        'provider': 'tidal_instance',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '12345',
            'provider_domain': 'tidal',
            'provider_instance': 'tidal_instance',
            'url': 'https://tidal.com/artist/12345',
          }),
        ]),
        'sort_name': 'test artist',
        'translation_key': None,
        'uri': 'tidal_instance://artist/12345',
        'version': '',
      }),
    ]),
    'date_added': None,
    'external_ids': list([
      list([
        'barcode',
        '123456789012',
      ]),
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '67890',
    'media_type': 'album',
    'metadata': dict({
      'chapters': None,
      'copyright': '℗ 2023 Test Label',
      'description': None,
      'explicit': False,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://resources.tidal.com/images/abcd/ef01/2345/6789/750x750.jpg',
          'provider': 'tidal_instance',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': 50,
      'preview': None,
      'release_date': '2023-01-01T00:00:00',
      'review': None,
      'style': None,
    }),
    'name': 'Test Album',
    'position': None,
    'provider': 'tidal_instance',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': 'flac',
          'output_format_str': 'flac',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '67890',
        'provider_domain': 'tidal',
        'provider_instance': 'tidal_instance',
        'url': 'https://tidal.com/album/67890',
      }),
    ]),
    'sort_name': 'test album',
    'translation_key': None,
    'uri': 'tidal_instance://album/67890',
    'version': 'Deluxe Edition',
    'year': 2023,
  })
# ---
# name: test_parse_artist[artist]
  dict({
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '12345',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://resources.tidal.com/images/1234/5678/90ab/cdef/750x750.jpg',
          'provider': 'tidal_instance',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Test Artist',
    'position': None,
    'provider': 'tidal_instance',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '12345',
        'provider_domain': 'tidal',
        'provider_instance': 'tidal_instance',
        'url': 'https://tidal.com/artist/12345',
      }),
    ]),
    'sort_name': 'test artist',
    'translation_key': None,
    'uri': 'tidal_instance://artist/12345',
    'version': '',
  })
# ---
# name: test_parse_playlist[mix]
  dict({
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_editable': False,
    'is_playable': True,
    'item_id': 'mix_mix_123',
    'media_type': 'playlist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': 'A personalized mix just for you',
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'http://example.com/mix-medium.jpg',
          'provider': 'tidal_instance',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'My Daily Discovery',
    'owner': 'Created by Tidal',
    'position': None,
    'provider': 'tidal_instance',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': False,
        'item_id': 'mix_mix_123',
        'provider_domain': 'tidal',
        'provider_instance': 'tidal_instance',
        'url': 'https://tidal.com/browse/mix/mix_123',
      }),
    ]),
    'sort_name': 'my daily discovery',
    'translation_key': None,
    'uri': 'tidal_instance://playlist/mix_mix_123',
    'version': '',
  })
# ---
# name: test_parse_playlist[playlist]
  dict({
    'date_added': None,
    'external_ids': list([
    ]),
    'favorite': False,
    'is_editable': False,
    'is_playable': True,
    'item_id': 'aabbcc-1122-3344-5566',
    'media_type': 'playlist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://resources.tidal.com/images/playlist/square/image/id/750x750.jpg',
          'provider': 'tidal_instance',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Test Playlist',
    'owner': 'Tidal',
    'position': None,
    'provider': 'tidal_instance',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': False,
        'item_id': 'aabbcc-1122-3344-5566',
        'provider_domain': 'tidal',
        'provider_instance': 'tidal_instance',
        'url': 'https://tidal.com/browse/playlist/aabbcc-1122-3344-5566',
      }),
    ]),
    'sort_name': 'test playlist',
    'translation_key': None,
    'uri': 'tidal_instance://playlist/aabbcc-1122-3344-5566',
    'version': '',
  })
# ---
# name: test_parse_track[track]
  dict({
    'album': dict({
      'available': True,
      'external_ids': list([
      ]),
      'image': None,
      'is_playable': True,
      'item_id': '67890',
      'media_type': 'album',
      'name': 'Test Album',
      'provider': 'tidal_instance',
      'sort_name': 'test album',
      'translation_key': None,
      'uri': 'tidal_instance://album/67890',
      'version': '',
    }),
    'artists': list([
      dict({
        'date_added': None,
        'external_ids': list([
        ]),
        'favorite': False,
        'is_playable': True,
        'item_id': '12345',
        'media_type': 'artist',
        'metadata': dict({
          'chapters': None,
          'copyright': None,
          'description': None,
          'explicit': None,
          'genres': None,
          'grouping': None,
          'images': list([
            dict({
              'path': 'https://resources.tidal.com/images/1234/5678/90ab/cdef/750x750.jpg',
              'provider': 'tidal_instance',
              'remotely_accessible': True,
              'type': 'thumb',
            }),
          ]),
          'label': None,
          'languages': None,
          'last_refresh': None,
          'links': None,
          'lrc_lyrics': None,
          'lyrics': None,
          'mood': None,
          'performers': None,
          'popularity': None,
          'preview': None,
          'release_date': None,
          'review': None,
          'style': None,
        }),
        'name': 'Test Artist',
        'position': None,
        'provider': 'tidal_instance',
        'provider_mappings': list([
          dict({
            'audio_format': dict({
              'bit_depth': 16,
              'bit_rate': 0,
              'channels': 2,
              'codec_type': '?',
              'content_type': '?',
              'output_format_str': '?',
              'sample_rate': 44100,
            }),
            'available': True,
            'details': None,
            'in_library': None,
            'is_unique': None,
            'item_id': '12345',
            'provider_domain': 'tidal',
            'provider_instance': 'tidal_instance',
            'url': 'https://tidal.com/artist/12345',
          }),
        ]),
        'sort_name': 'test artist',
        'translation_key': None,
        'uri': 'tidal_instance://artist/12345',
        'version': '',
      }),
    ]),
    'date_added': None,
    'disc_number': 1,
    'duration': 180,
    'external_ids': list([
      list([
        'isrc',
        'US1234567890',
      ]),
    ]),
    'favorite': False,
    'is_playable': True,
    'item_id': '112233',
    'last_played': 0,
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': '℗ 2023 Test Label',
      'description': None,
      'explicit': False,
      'genres': None,
      'grouping': None,
      'images': list([
        dict({
          'path': 'https://resources.tidal.com/images/abcd/ef01/2345/6789/750x750.jpg',
          'provider': 'tidal_instance',
          'remotely_accessible': True,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'languages': None,
      'last_refresh': None,
      'links': None,
      'lrc_lyrics': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': 60,
      'preview': None,
      'release_date': None,
      'review': None,
      'style': None,
    }),
    'name': 'Test Track',
    'position': None,
    'provider': 'tidal_instance',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 24,
          'bit_rate': 0,
          'channels': 2,
          'codec_type': '?',
          'content_type': 'flac',
          'output_format_str': 'flac',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'in_library': None,
        'is_unique': None,
        'item_id': '112233',
        'provider_domain': 'tidal',
        'provider_instance': 'tidal_instance',
        'url': 'https://tidal.com/track/112233',
      }),
    ]),
    'sort_name': 'test track',
    'track_number': 1,
    'translation_key': None,
    'uri': 'tidal_instance://track/112233',
    'version': 'Remastered',
  })
# ---
